# poc_motion_planning

./: .gitignore  CMakeLists.txt  helpskript.py  instructions.txt  main.cpp  poc_boost.cpp  poc_boost_replacement.cpp  refpath.txt  todo.txt
cldc/: CMakeLists.txt
cldc/include/geometry/: clcs_types.h  curvilinear_coordinate_system.h  util_projection_domain.h  util_sweep_line.h
cldc/src/: projection_domain.cc  util_projection_domain.cc
cost_functions/: CMakeLists.txt
feasibility_functions/: CMakeLists.txt
trajectory_handler/: CMakeLists.txt
trajectory_handler/include/: TrajectoryHandler.hpp
trajectory_handler/src/: TrajectoryHandler.cpp
trajectory_sample/: CMakeLists.txt
trajectory_sample/include/: TrajectorySample.hpp
trajectory_sample/src/: CoordinateSystemWrapper.cpp  FillCoordinates.cpp  TrajectorySample.cpp
